More renaming Adding exercises and questions Re-arranging the code parts

--- a/exercise-1.ipynb
+++ b/exercise-1.ipynb
@@ -164,12 +164,12 @@
    "id": "37508b45-1e74-469d-a3c4-947a7903cd54",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercises\n",
     "\n",
     "Make sure that the signature fails in the following cases:\n",
     "\n",
-    "- the message is different from the message used in the signing process\n",
-    "- the public key is different than the public key from the issuer"
+    "1. the message is different from the message used in the signing process\n",
+    "2. the public key is different than the public key from the issuer"
    ]
   },
   {
@@ -310,10 +310,10 @@
    "id": "b1580444-bdb9-43d0-b12b-9a3afb0f5088",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercises\n",
     "\n",
-    "- Print the hashes of `hashValue(value)` and from the `RETRIEVED_DATA(key)` and compare them visually\n",
-    "- Change the disclosed fields and make sure it still rus"
+    "1. Print the hashes of `hashValue(value)` and from the `RETRIEVED_DATA(key)` and compare them visually\n",
+    "2. Change the disclosed fields and make sure it still rus"
    ]
   },
   {
