--- a/exercise-2.ipynb
+++ b/exercise-2.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "const E_ID_DATA = {\n",
     "    name: \"Jack Sparrow\",\n",
-    "    timeOfBirth: 744156000000,\n",
+    "    timeOfBirth: new Date(\"1993-08-01T00:00:00\").getTime(),\n",
     "    profession: \"IT Manager\"\n",
     "}\n",
     "\n",
@@ -69,6 +69,17 @@
     "        timeOfBirth: { type: 'integer', minimum: 0},\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cf4fcc3-9077-4870-be78-b39be932d084",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1. What is the format for `timeOfBirth`? And what is the limitations using that format? What else could the format be?\n",
+    "2. What other fields could be in the credential?\n"
    ]
   },
   {
@@ -90,26 +101,24 @@
     "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
     "await initializeWasm();\n",
     "\n",
-    "// Generating a keypair once signature parameters are created.\n",
-    "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES } from '@docknetwork/crypto-wasm-ts';\n",
+    "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
+    "        CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "const stringToBytes = (str: string) => Uint8Array.from(Buffer.from(str, \"utf-8\"));\n",
     "\n",
+    "// Generating a keypair once signature parameters are created.\n",
     "const params = BBSSignatureParams.generate(100, BBS_SIGNATURE_PARAMS_LABEL_BYTES);\n",
     "const keypair = BBSKeypair.generate(params, stringToBytes('seed1'));\n",
     "\n",
     "const secretKey = keypair.secretKey;\n",
     "const publicKey = keypair.publicKey;\n",
     "\n",
-    "// Issing a credential based on the E-ID data based on the specified schema\n",
-    "import { CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
-    "\n",
+    "// Issuing a credential based on the E-ID data based on the specified schema\n",
     "\n",
     "// sets a default structure for a credential with the proof \n",
     "let credential_schema = CredentialSchema.essential();\n",
     "// Puts our data schema inside the credential schema\n",
     "credential_schema.properties[SUBJECT_STR] = E_ID_SCHEMA\n",
-    "\n",
     "\n",
     "// Populate the credential with data\n",
     "const builder = new BBSCredentialBuilder();\n",
@@ -117,19 +126,22 @@
     "builder.subject = E_ID_DATA\n",
     "\n",
     "// sign the credential\n",
-    "const verifiableCredential = builder.sign(secretKey);"
+    "const verifiableCredential = builder.sign(secretKey);\n",
+    "\n",
+    "// Now, the credential is sent to the holder\n",
+    "const credentialToSendToHolder = verifiableCredential.toJSON()\n",
+    "console.log(\"Credential sent to the holder:\", credentialToSendToHolder)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d52c2fb7-c14c-42cb-8681-1db2fc2ef9fa",
+   "cell_type": "markdown",
+   "id": "0684b4ed-7bb5-401f-8feb-3eb1f6b10869",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Now, the credential is sent to the holder\n",
-    "const credentialToSendToHolder = verifiableCredential.toJSON()\n",
-    "credentialToSendToHolder"
+    "### Questions\n",
+    "\n",
+    "1. What information do you find in the credential which is sent to the holder? What keywords / algorithms do you recognize?\n",
+    "2. How big in bytes is the proof sent to the holder?"
    ]
   },
   {
@@ -162,7 +174,8 @@
     "presentationBuilder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
     "\n",
     "const presentation = presentationBuilder.finalize();\n",
-    "console.log(presentation)"
+    "const bbsProofForVerifier = presentation.toJSON()\n",
+    "console.log(\"The proof which is sent to the verifier:\", bbsProofForVerifier);"
    ]
   },
   {
@@ -170,13 +183,26 @@
    "id": "7cec6a8b-3ca9-4d24-89e2-f9e53a5750d4",
    "metadata": {},
    "source": [
-    "### sending data to Verifier\n",
-    "data: \n",
+    "### Holder -> Verifier\n",
+    "\n",
+    "The following data is sent to the verifier\n",
     "1. selected data to be revealed\n",
     "2. Schema of the credential\n",
     "3. Proof of validity\n",
     "\n",
     "All this information and more is stored in the \"presentation object\". Note that this object is a completely serializable JSON object.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4094c90b-dcc4-4097-adc3-4057f915d746",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1. Explore the bbsProofVerifier to see what information is sent to the verifier\n",
+    "2. Is there information which could be used to de-anonymize the holder?\n",
+    "3. How long is the proof now? Why is it bigger than the proof sent by the issuer?"
    ]
   },
   {
@@ -191,19 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a44c3ab6-9857-4575-8e39-30238d7a7b60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "const receivedObjectOnVerifierSide = presentation.toJSON()\n",
-    "console.log(receivedObjectOnVerifierSide)  // Assume this was serialized and sent across an API to the verifier.\n",
-    "console.log(\"-------------------------\")\n",
-    "console.log(presentation.spec.credentials[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22caae45-228a-4fdb-ab92-705f112ed7b1",
    "metadata": {},
    "outputs": [],
@@ -211,11 +224,21 @@
     "// Verification of the data the verifier received is as easy as two lines of code!\n",
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
-    "const recreatedPres = Presentation.fromJSON(receivedObjectOnVerifierSide)\n",
-    "recreatedPres.verify([publicKey])\n",
+    "const recreatedPres = Presentation.fromJSON(bbsProofForVerifier)\n",
+    "console.log(\"The proof is valid:\", recreatedPres.verify([publicKey]).verified);\n",
+    "console.log(\"The shared data is:\", recreatedPres.spec.credentials[0].revealedAttributes);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41c5279-7ae9-466f-b32b-5a4ca35bcd17",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
     "\n",
-    "// Now, we can go ahead and access the shared data!\n",
-    "//recreatedPres.spec.credentials[0].revealedAttributes"
+    "1. Can you create a proof which cannot be validated? What did you change?\n",
+    "2. Reveal another element of the credential - what did you need to change?\n",
+    "3. How does the verifier know the credentials to reveal?"
    ]
   },
   {
@@ -255,7 +278,7 @@
     "\n",
     "// By generating a proof multiple times, and comparing the proof in each of them,\n",
     "// we see that they're always different making it difficult (Impossible?!) to correlate the different proofs.\n",
-    "console.log(proof1 === proof2)\n",
+    "console.log(\"Two created proofs are the same:\", proof1 === proof2);\n",
     "\n",
     "// This is a weak proof! In the paper, there's a real mathematical proof to \n",
     "// ensure that different generated proofs are unlinkable "
@@ -272,7 +295,7 @@
     "// As opposed to the previous exercise where we had to share all the data all the time\n",
     "// even though possibly in a hashed format, in this case, we only share the selected data.\n",
     "\n",
-    "presentation.spec.credentials[1][\"revealedAttributes\"]\n",
+    "console.log(\"Revealed attributes:\", presentation.spec.credentials[1][\"revealedAttributes\"]);\n",
     "\n",
     "// In this scenario, we see that only the data needed to be revealed is revealed resulting in unlinkability."
    ]
