--- a/supp-exercise-3.ipynb
+++ b/supp-exercise-3.ipynb
@@ -5,7 +5,7 @@
    "id": "8a8017a7-2e57-4fda-8007-2836dd5b5819",
    "metadata": {},
    "source": [
-    "# Exercise 3 Detail - Range proofs with ZKPs\n",
+    "# Supp Exercise 3 - Range proofs with ZKPs\n",
     "\n",
     "While the Exercise 3 shows a simple way of creating ZKPs using the docknetwork/crypto library, this notebook shows a more detailed version of using ZKPs.\n",
     "It can help giving an intuition of how ZKPs work and what is possible with them.\n",
