--- a/exercise-1.ipynb
+++ b/exercise-1.ipynb
@@ -74,20 +74,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a58225-7126-4ce8-9144-b79e9ee7ae8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import * as crypto from 'crypto';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0d085f1c-3854-44e6-ac09-bafdca23e6e8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import * as crypto from 'crypto';\n",
+    "\n",
     "/* \n",
     " For an issuer to be able to start issuing Verifiable Credentials, it first needs\n",
     " to have its own cryptographic key pair. \n",
@@ -104,16 +96,8 @@
     "      type: 'pkcs8',\n",
     "      format: 'pem',\n",
     "    }\n",
-    "});"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e9de6af-a313-4cd5-8e20-8b3588bccb73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "});\n",
+    "\n",
     "// An issuer will convert the data object into a string\n",
     "const message = JSON.stringify(ID_DATA)\n",
     "\n",
@@ -204,6 +188,7 @@
     "  hash.update(value);\n",
     "  return hash.digest('hex');\n",
     "}\n",
+    "\n",
     "const ID_DATA_HASHED = {\n",
     "    name: hashValue(ID_DATA['name']),\n",
     "    timeOfBirth: hashValue(ID_DATA['timeOfBirth'].toString()),\n",
