--- a/exercise-2.ipynb
+++ b/exercise-2.ipynb
@@ -262,7 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "presentationBuilder.finalize()[\"proof\"].hex"
+    "// Run this a couple of times to see how it changes\n",
+    "console.log(\"One finalized proof:\", presentationBuilder.finalize()[\"proof\"].hex)"
    ]
   },
   {
