--- a/exercise-4a-calc.ipynb
+++ b/exercise-4a-calc.ipynb
@@ -43,7 +43,8 @@
    "source": [
     "// Common setup - creating a credential, an issuer, and a signature.\n",
     "\n",
-    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
+    "import { initializeWasm, BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
+    "       CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
     "await initializeWasm();\n",
     "\n",
     "// Credential used for measurements\n",
@@ -66,7 +67,6 @@
     "}\n",
     "\n",
     "// Setting up the issuer and creating the signatures\n",
-    "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES } from '@docknetwork/crypto-wasm-ts';\n",
     "\n",
     "const stringToBytes = (str: string) => Uint8Array.from(Buffer.from(str, \"utf-8\"));\n",
     "\n",
@@ -75,8 +75,6 @@
     "\n",
     "const secretKey = keypair.secretKey;\n",
     "const publicKey = keypair.publicKey;\n",
-    "\n",
-    "import { CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "const schema = CredentialSchema.essential(); \n",
     "schema.properties[SUBJECT_STR] = E_ID_SCHEMA\n",
@@ -87,7 +85,7 @@
     "\n",
     "const credential = builder.sign(secretKey);\n",
     "\n",
-    "const credentialToSendToHolder = credential.toJSON()"
+    "const credentialToSendToHolder = credential.toJSON();"
    ]
   },
   {
